# spoke

./: .epistaxis-session.json  .gitignore  .spoke-smoke-env  AGENTS.md  BACKLOG.md  CLAUDE.md  Dictate.spec  DontTalk.spec  GEMINI.md  README.md  bench_results_MacBook-Pro-2.local.json  entry_point.py  gemini_shim.py  pyproject.toml  services.yaml
.claude/: settings.local.json
.claude/worktrees/binary-finding-flute/: CLAUDE.md  DontType.spec  README.md  pyproject.toml
.claude/worktrees/binary-finding-flute/.claude/: settings.local.json
.claude/worktrees/binary-finding-flute/donttype/: __init__.py  capture.py  dedup.py  glow.py  input_tap.py  menubar.py  transcribe.py  transcribe_local.py  transcribe_qwen.py
.claude/worktrees/binary-finding-flute/scripts/: analyze-demo.py  build-dmg.sh  demo-convert.sh
.claude/worktrees/binary-finding-flute/tests/: conftest.py  test_capture.py  test_dedup.py  test_inject.py  test_input_tap.py  test_menubar.py  test_transcribe_local.py  test_transcribe_qwen.py  test_typewriter.py
.codex/: config.toml
dictate/: __main__.py  glow.py  transcribe_local.py
docs/: converge-operator-shell-architecture.md  developer-operator-surfaces.md  documentation_surfaces.toml  epistaxis-git-runbook.md  glassjaw-preview-compositor-adapter-plan.md  keyboard-grammar.md  local-smoke-runbook.md  mlx-audio-sidecar.md  operator-shell-roadmap.md  optical-field-consumer-contract.md  optical-field-contract.md  review-authority-surfaces.md  review_surfaces.toml  screen-context-v1.md
donttalk/: __init__.py  __main__.py  capture.py  inject.py  input_tap.py  menubar.py  overlay.py  transcribe.py  transcribe_local.py
donttype/: __main__.py  capture.py  dedup.py  glow.py  overlay.py  transcribe.py  transcribe_local.py  transcribe_qwen.py
reviews/: spoke_butterfingers-tests-anaphora_2026-04-01.md  spoke_butterfingers-tests-probole_2026-04-01.md  spoke_crash-hardening-tests-anaphora_2026-04-01.md  spoke_crash-hardening-tests-probole_2026-04-01.md
scripts/: acp-probe.py  build-dmg.sh  build.sh  converge-build-glossary.py  converge-carve-attractors.py  converge-carve.py  converge-embed.py  converge-migrate.py  converge_embed_lib.py  demo-carve.py  demo-convert.sh  launch-dev.sh  launch-main.sh  launch-smoke.sh  launch-target.sh  optical-frame-witness.py  optical-shell-baseline.py  secrets.env.example  seed-documentation-surfaces.py  setup-mlx-audio-server.sh  smoke-capture.py  spoke-doctor.sh  test_vad.py
spoke/: __main__.py  acp_probe.py  agent_backend_presenter.py  agent_backends.py  agent_sdk_operator.py  agent_shell.py  agent_shell_card_renderer.py  agent_shell_identity.py  agent_shell_placement.py  agent_shell_primitives.py  agent_thread_bearings.py  agent_thread_cards.py  agent_thread_hud.py  agent_thread_narrator.py  agent_thread_waypoint_sources.py  backdrop_stream.py  brave_search_operator.py  capture.py  command.py  command_overlay.py  converge.py  coordination_surfaces.py  dedup.py  documentation_surfaces.py  epistaxis_operator.py  focus_check.py  fullscreen_compositor.py  gemini_live.py  glow.py  gmail_operator.py  handsfree.py  heartbeat.py  inject.py  input_tap.py  launch_targets.py  menubar.py  metal_warp.py  narrator.py  openwakeword_training.py  optical_field.py  (+28 more)
tests/: conftest.py  test_acp_probe.py  test_agent_backends.py  test_agent_sdk_operator.py  test_agent_shell_card_renderer.py  test_agent_shell_identity.py  test_agent_shell_placement.py  test_agent_shell_primitives.py  test_agent_thread_bearings.py  test_agent_thread_cards.py  test_agent_thread_hud.py  test_agent_thread_waypoint_sources.py  test_backdrop_stream.py  test_brave_search_operator.py  test_brightness_field.py  test_capture.py  test_command.py  test_command_overlay.py  (+69 more)
(+52 files in other folders)
