[project]
name = "spoke"
version = "0.1.0"
description = "Global hold-to-dictate for macOS — spacebar → record → transcribe → paste"
requires-python = ">=3.13"
dependencies = [
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "sounddevice",
    "numpy",
    "httpx",
    "mlx-whisper @ git+https://github.com/lyonsno/mlx-whisper-patched.git@eb06ea05a77037e971139d11195c675277836272",
    "mlx-qwen3-asr>=0.3.2",
    "openwakeword",
    "pyobjc-framework-vision>=12.1",
    "pvporcupine>=3.0",
    "pillow>=12.2.0",
    "requests>=2.32.5",
]

[project.scripts]
spoke = "spoke.__main__:main"

[project.optional-dependencies]
tts = [
    "mlx-audio[tts]",
    "mlx-lm",
    "mistral-common[audio]",
    "omnivoice",
    "torch",
    "torchaudio",
]
wakeword-training = [
    "onnx",
    "scipy",
    "torch",
]

[dependency-groups]
dev = [
    "py2app>=0.28.10",
    "pyinstaller>=6.19.0",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
